shoot continued